Setting up process to include restoring a database to the SQL server container

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '3'
+name: adventure-works-dev-container
 
 services:
   app:
+    container_name: app-source
     build: 
       context: .
       dockerfile: Dockerfile
@@ -22,11 +23,15 @@ services:
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   db:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: app-db
+    build: 
+      context: ./mssql
+      dockerfile: Dockerfile
     restart: unless-stopped
     environment:
-      SA_PASSWORD: P@ssw0rd
       ACCEPT_EULA: Y
+    env_file:
+      - .env
 
     # Add "forwardPorts": ["db:1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
