--- a/.devcontainer/workspace/Dockerfile
+++ b/.devcontainer/workspace/Dockerfile
@@ -1,4 +1,8 @@
-FROM mcr.microsoft.com/devcontainers/dotnet:1-9.0-bookworm
+FROM mcr.microsoft.com/devcontainers/dotnet:dev-9.0-noble
+
+# Create the user folder for the .NET tools
+RUN mkdir -p /home/vscode/.dotnet
+RUN mkdir -p /home/vscode/.dotnet/tools
 
 # Add .NET global tools path
 ENV PATH $PATH:/home/vscode/.dotnet:/home/vscode/.dotnet/tools
@@ -8,8 +12,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y upgrade \
     && apt-get -y install --no-install-recommends software-properties-common
 
-# Install SQL Tools: SQLPackage and sqlcmd
-COPY mssql/installSQLtools.sh installSQLtools.sh
+# Install SQL Tools
+COPY ./installSQLtools.sh installSQLtools.sh
 RUN bash ./installSQLtools.sh \
      && apt-get clean -y \
      && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
