--- a/src/AdventureWorksDevContainer.Host/AdventureWorksDevContainer.Host.csproj
+++ b/src/AdventureWorksDevContainer.Host/AdventureWorksDevContainer.Host.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>cabc79ea-5c2a-4e67-a7e8-258e5140bdf4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
