--- a/src/AdventureWorksDevContainer.Host/AdventureWorksDevContainer.Host.csproj
+++ b/src/AdventureWorksDevContainer.Host/AdventureWorksDevContainer.Host.csproj
@@ -13,11 +13,11 @@
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="8.2.0" />
     <PackageReference Include="GraphQL.Server.Ui.GraphiQL" Version="8.2.0" />
     <PackageReference Include="GraphQL.SystemTextJson" Version="8.2.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
