--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "cwd": "${workspaceFolder}/src/AdventureWorksDevContainer.Host",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
-            // The default path is to the GraphQL Altair UI. This can be changed to launch the Swagger UI by replacing '/ui/altair' with '/ui/swagger/index.html'.
+            // The default path is to the GraphQL Altair UI. This can be changed to launch the Swagger UI by replacing '/ui/altair' with '/swagger/index.html'.
             "serverReadyAction": {
                 "action": "openExternally",
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
