Adding SonarCube for testing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,7 +34,8 @@
 				"ms-dotnettools.vscodeintellicode-csharp",
 				"ms-mssql.mssql",
 				"github.copilot",
-				"github.codespaces"
+				"github.codespaces",
+                "sonarsource.sonarlint-vscode"
 			],
 
 			// Set *default* container specific settings.json values on container create.
@@ -53,6 +54,10 @@
 					}
 				],
 				"remote.localPortHost": "allInterfaces",
+                "sonarlint.connectedMode.project": {
+                    "connectionId": "mystikweb",
+                    "projectKey": "Mystikweb_adventure-works-dev-container"
+                },
 				"sqlDatabaseProjects.dotnetSDK Location": "/usr/share/dotnet"
 			}
 		}
