Fixing solution file and devcontainer configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,7 +34,9 @@
 				"ms-dotnettools.vscodeintellicode-csharp",
 				"ms-mssql.mssql",
 				"github.copilot",
-				"github.codespaces",
+				"github.copilot-chat",
+				"github.vscode-github-actions",
+				"github.vscode-pull-request-github",
                 "sonarsource.sonarlint-vscode"
 			],
 
